2006-08-22  Brian Bidulock  <bidulock@openss7.org>

	* scripts/texi/compat.texi: created common compatibility text
	* scripts/texi/macros.texi: created common macros file
	* NEWS: updates for release
	* doc/manual/Makefile.am: updated documentation
	* doc/manual/releases.texi: updated documentation
	* doc/manual/striso.texi: updated documentation

2006-08-16  Brian Bidulock  <bidulock@openss7.org>

	* doc/manual/releases.texi: added supported SuSE distirbutions
	* m4/kernel.m4: adjusted autoconf.h path for SLES 10
	* m4/pr.m4: more info for SLES distribution
	* m4/rpm.m4: more info for SLES distribution

2006-08-14  Brian Bidulock  <bidulock@openss7.org>

	* striso.spec.in: get kernel_source right for SUSE smp kernel

2006-08-09  Brian Bidulock  <bidulock@openss7.org>

	* m4/kernel.m4: SLES doesn't include -ffreestanding

2006-08-08  Brian Bidulock  <bidulock@openss7.org>

	* doc/manual/releases.texi: added SLES 9 to supported distros
	* doc/manual/texi/install.texi: debs apply to Debian not RedHat
	* scripts/texi/install.texi: debs apply to Debian not RedHat

2006-07-25  Brian Bidulock  <bidulock@openss7.org>

	* acinclude.m4: expand majors, minors and module ids
	* src/drivers/tp.c: correct locking

2006-07-24  Brian Bidulock  <bidulock@openss7.org>

	* src/drivers/clns.c: fix up inlines for recent compilers

2006-07-16  Brian Bidulock  <bidulock@openss7.org>

	* .pkgrelease: bumped release number for release candidate 3
	* debian/changelog: bumped release number for release candidate 3
	* NEWS: bumped release number for release candidate 3

2006-07-11  Brian Bidulock  <bidulock@openss7.org>

	* Makefile.am: added ISO files to the distribution
	* doc/man/Makefile.am: added ISO manpages to the distribution
	* src/drivers/clns.c: changes for clean compile
	* src/drivers/lis.conf: added driver definitions
	* src/drivers/tp.c: changes for compile
	* src/modules/cmot.c: added module
	* src/modules/isot.c: added module
	* src/modules/itot.c: added module